<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".ui.fragment.PlayListFragment">


    <ImageView
        android:id="@+id/closeImageView"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/up_next"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/closeImageView" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/upNextRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:listitem="@layout/item_up_next" />


    <ImageView
        android:id="@+id/playImage"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_play_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/playNextImage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/playPreviousImage" />

    <ImageView
        android:id="@+id/pauseImage"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_pause"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/playNextImage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/playPreviousImage" />


    <ImageView
        android:id="@+id/playPreviousImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_play_previous"
        app:layout_constraintBottom_toBottomOf="@+id/playImage"
        app:layout_constraintEnd_toStartOf="@+id/playImage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fastBackwardImage"
        app:layout_constraintTop_toTopOf="@+id/playImage" />

    <ImageView
        android:id="@+id/fastBackwardImage"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_play_back"
        app:layout_constraintBottom_toBottomOf="@+id/playImage"
        app:layout_constraintEnd_toStartOf="@+id/playPreviousImage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/playImage" />

    <ImageView
        android:id="@+id/playNextImage"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_play_next"
        app:layout_constraintBottom_toBottomOf="@+id/playImage"
        app:layout_constraintEnd_toStartOf="@+id/fastForwardImage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/playImage"
        app:layout_constraintTop_toTopOf="@+id/playImage" />

    <ImageView
        android:id="@+id/fastForwardImage"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_fast_forward"
        app:layout_constraintBottom_toBottomOf="@+id/playNextImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/playNextImage"
        app:layout_constraintTop_toTopOf="@+id/playNextImage" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:progress="45"
        android:progressBackgroundTint="#AAFFFFFF"
        android:progressTint="@color/white"
        android:thumb="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/playImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/currentProgressTimeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/_1_29"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="@+id/seekBar" />

    <TextView
        android:id="@+id/totalTimeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/_4_28"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="@+id/seekBar" />

    <ImageView
        android:id="@+id/currentSongImage"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/song_cover"
        app:layout_constraintBottom_toTopOf="@+id/currentProgressTimeTv"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nowPlayingTitleTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:singleLine="true"
        android:text="@string/getting_around_the_bowel"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/nowPlayingDetailsTv"
        app:layout_constraintEnd_toEndOf="@+id/totalTimeTv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/currentSongImage"
        app:layout_constraintTop_toTopOf="@+id/currentSongImage"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/nowPlayingDetailsTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:text="@string/constellations_mark_thomas_amp_nina_jay_2021"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/currentSongImage"
        app:layout_constraintEnd_toEndOf="@+id/totalTimeTv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/currentSongImage"
        app:layout_constraintTop_toBottomOf="@+id/nowPlayingTitleTv" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/now_playing"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/currentSongImage"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>